-- V.27 -- 05/12/2025 --
Refactored code component classes

Fixed some overlapping issues with z-indexing in the home page.

-- V.26 -- 05/12/2025 --
Several updates to styles and usability
Web styling changed to match across the board with coloring
    Centering has been messed up for the last 3 iterations.
    Finally solved

Two additional Cards filled out in Projects tab

Languages and Technologies now pull from cardinfo.json so that I can add projects from the web interface later.
Back Buttons added on individual project pages -> projects
    and projects -> home
    and bio -> home

Individual projects now properly pulling from projects.json

-- V.25 -- 05/12/2025 --
Home page scaled back a bit. It was going in the wrong direction from some bad advice.

to do:
    edit pages to match homepage

-- V.24 -- 05/11/2025 --
Hourglass Twins added for external links in the Home Page

-- V.23 -- 05/10/2025 --
Better mobile support. Fixed clipping with navigation link wrapping
    Nav Link coloring style changed to be consistent across the buttons

Styling fix with the Banner at the top of the main pages
    Set the distance apart closer
    Changed the html brackets to the orange that matches the rest of our site
    Added blur and opacity to the large banner image

-- V.22 -- 05/10/2025 --
Mobile support for icons on the home page

-- V.21 -- 05/10/2025 --
Home page conversion to Starfield
    Floating orbs for homepage add some fun to it.
        In the future I want to make these float around and bounce off objects.
All pages converted to Starfield background

-- V.20 -- 05/10/2025 --
CrediTrust AI:
    Subtitle fixed
    Page added to reflect other cards

Revenue Prediction App
    Contact page removed

-- V.19 -- 05/10/2025 --
Freelance music page fixed. No AI hallucinations remain


-- V.18 -- 05/10/2025 --
Changelog added

Cards now have a type showing the user what their deployment status is (archived, demo, live)

Major styling change: