@@ -3,8 +3,6 @@ import React from 'react';
 const Home = () => {
   return (
     <>
-      {/* Home is now just a placeholder since Layout handles the home view */}
-      {/* The layout will display this content on the homepage */}
     </>
   );
 };
