@@ -3,6 +3,8 @@ Refactored code component classes
 
 Fixed some overlapping issues with z-indexing in the home page.
 
+Added some more description to a project.
+
 -- V.26 -- 05/12/2025 --
 Several updates to styles and usability
 Web styling changed to match across the board with coloring
